--- a/NextnerTest/Delivery/templates/Delivery/index.html
+++ b/NextnerTest/Delivery/templates/Delivery/index.html
@@ -1,24 +1,63 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <body>
 
-<h1>{{ title }}</h1>
-
-{% for item in delivery %}
-    <div>
-        <p>{{ item.item_name }}</p>
-        <p>{{ item.type_item }}</p>
-        <p>{{ item.delivery_date }}</p>
-        {% for address in item.address_delivery.all %}
-            <p>{{ address }}</p>
-        {% endfor %}
+<nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item"><a class="nav-link" href="/">{{ title }}</a></li>
+                <li class="nav-item"><a class="nav-link" href="/">Добавить доставку</a></li>
+            </ul>
+        </div>
     </div>
-    <hr>
-{% endfor %}
+</nav>
 
+<div class="container">
+    <h1>{{ title }}</h1>
+    <div class="row">
+
+        {% for item in delivery %}
+        <div class="card text-center">
+            <div class="card-header">
+                Дата доставки: {{ item.delivery_date }}
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">{{ item.item_name }}</h5>
+                <p class="card-text">Тип: {{ item.type_item }}</p>
+                <p class="card-text">Адрес доставки:
+                    {% for address in item.address_delivery.all %}
+                    {{ address }}
+                    {% endfor %}
+                </p>
+
+                <a href="#" class="btn btn-primary">нужна или нет не понятно пока</a>
+            </div>
+            <div class="card-footer text-muted">
+                Осталось сколько-то дней
+            </div>
+        </div>
+
+        {% endfor %}
+
+    </div>
+</div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
 </body>
 </html>
