add files with size into index.html

--- a/NextnerTest/Delivery/templates/Delivery/index.html
+++ b/NextnerTest/Delivery/templates/Delivery/index.html
@@ -28,30 +28,30 @@
 <div class="container">
     <h1>{{ title }}</h1>
     <div class="row">
-
-        {% for item in delivery %}
-        <div class="card text-center">
-            <div class="card-header">
-                Дата доставки: {{ item.delivery_date }}
+        <div class="col-md-12">
+            {% for item in delivery %}
+            <div class="card text-center">
+                <div class="card-header">
+                    Дата доставки: {{ item.delivery_date }}
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">{{ item.item_name }}</h5>
+                    <p class="card-text">Тип: {{ item.type_item }}</p>
+                    <p class="card-text">Адрес доставки:
+                        {% for address in item.address_delivery.all %}
+                        {{ address }}
+                        {% endfor %}
+                    </p>
+                    {% if item.file %}
+                    <a href="{{ item.file.url }}" class="btn btn-primary">Файл {{ item.size_mb }} Мб</a>
+                    {% endif %}
+                </div>
+                <div class="card-footer text-muted">
+                    Осталось сколько-то дней
+                </div>
             </div>
-            <div class="card-body">
-                <h5 class="card-title">{{ item.item_name }}</h5>
-                <p class="card-text">Тип: {{ item.type_item }}</p>
-                <p class="card-text">Адрес доставки:
-                    {% for address in item.address_delivery.all %}
-                    {{ address }}
-                    {% endfor %}
-                </p>
-
-                <a href="#" class="btn btn-primary">нужна или нет не понятно пока</a>
-            </div>
-            <div class="card-footer text-muted">
-                Осталось сколько-то дней
-            </div>
+            {% endfor %}
         </div>
-
-        {% endfor %}
-
     </div>
 </div>
 
