--- a/NextnerTest/Delivery/templates/Delivery/add_delivery.html
+++ b/NextnerTest/Delivery/templates/Delivery/add_delivery.html
@@ -28,7 +28,7 @@
 <div class="container">
     <h1>Добавить доставку</h1>
 
-    <form action="{% url 'add_delivery' %}" method="post">
+    <form action="{% url 'add_delivery' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary btn-block">Добавить доставку</button>
