add 2nd form with m2m fild

--- a/NextnerTest/Delivery/templates/Delivery/add_delivery.html
+++ b/NextnerTest/Delivery/templates/Delivery/add_delivery.html
@@ -30,7 +30,8 @@
 
     <form action="{% url 'add_delivery' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form_delivery.as_p }}
+        {{ form_address.as_p }}
         <button type="submit" class="btn btn-primary btn-block">Добавить доставку</button>
     </form>
 </div>
