add formset with 10 fields

--- a/NextnerTest/Delivery/templates/Delivery/add_delivery.html
+++ b/NextnerTest/Delivery/templates/Delivery/add_delivery.html
@@ -32,6 +32,7 @@
         {% csrf_token %}
         {{ form_delivery.as_p }}
         {{ form_address.as_p }}
+        {{ form_address.management_form }}
         <button type="submit" class="btn btn-primary btn-block">Добавить доставку</button>
     </form>
 </div>
