--- a/NextnerTest/Delivery/templates/Delivery/add_delivery.html
+++ b/NextnerTest/Delivery/templates/Delivery/add_delivery.html
@@ -1,56 +1,14 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ title }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-</head>
-<body>
+{% extends 'base.html' %}
 
-<nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}">ЛОГО</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">{{ title }}</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'add_delivery' %}">Добавить доставку</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
+{% block title %}Добавить доставку{% endblock %}
+{% block name %}Добавить доставку{% endblock %}
 
-<div class="container">
-    <h1>Добавить доставку</h1>
+{% block content %}
 
     <form action="{% url 'add_delivery' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {% for item in form %}
-            {% if forloop.counter == 1 %}
-                {{ item }}
-            {% else %}
-                {% for field in item %}
-                    {% if field.name == 'address_delivery' %}
-                    <p>{{ field }}</p>
-                    {% else %}
-                    <p>{{ field.as_hodden }}</p>
-                    {% endif %}
-                {% endfor %}
-            {% endif %}
-        {% endfor %}
-
+        {{ form.as_p }}
+        {{ formset }}
         <button type="submit" class="btn btn-primary btn-block">Добавить доставку</button>
     </form>
-</div>
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-        crossorigin="anonymous"></script>
-</body>
-</html>
+{% endblock %}
